Added ability to set student devices

--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,14 @@
     <h3><a href="/login"> Login</a></h3>
     <h3><a href="/grabSheet"> grabSheet</a></h3>
 </body>
+
+<body>
+
+    <form id="setDevice" method="POST" action="/setDevice">
+        <input type="text" name="deviceNumber" id="deviceNumber" placeholder="Enter Computer Number Here" required>
+        <input type="text" name="studentID" id="studentID" placeholder="Enter Student ID Here">
+        <input type="text" name="name" id="name" placeholder="Enter Student Name Here">
+        <button>Request</button>
+    </form>
+
+</body>
