Extra fetures/bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
 <body>
 
     <form id="setDevice" method="POST" action="/setDevice">
-        <input type="text" name="deviceNumber" id="deviceNumber" placeholder="Enter Computer Number Here" required>
-        <input type="text" name="studentID" id="studentID" placeholder="Enter Student ID Here">
-        <input type="text" name="name" id="name" placeholder="Enter Student Name Here">
+        <input type="text" name="deviceNumber" id="deviceNumber" placeholder="Computer Number" required>
+        <input type="text" name="studentID" id="studentID" placeholder="Student ID">
+        <input type="text" name="name" id="name" placeholder="Student Name">
+        <input type="text" name="email" id="email" placeholder="Student Email">
         <button>Request</button>
     </form>
 
