--- a/public/index.html
+++ b/public/index.html
@@ -27,3 +27,9 @@
     </form>
 
 </body>
+
+<body>
+    <form method="POST" action="/studentData">
+        <button>Student Data</button>
+    </form>
+</body>
