--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,9 @@
 
 <body>
     <h1>Please login</h1>
+    <form id="setDevice" method="GET" action="/index">
+        <button>Home</button>
+    </form>
 </body>
 
 <body>
