--- a/public/register.html
+++ b/public/register.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>Please create your account</h1>
+    <form id="setDevice" method="GET" action="/index">
+        <button>Home</button>
+    </form>
 </body>
 
 <body>
