--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <input type="text" name="studentID" id="studentID" placeholder="Student ID">
         <input type="text" name="name" id="name" placeholder="Student Name">
         <input type="text" name="email" id="email" placeholder="Student Email">
-        <button>Request</button>
+        <button>Make Note</button>
     </form>
 
 </body>
@@ -33,6 +33,13 @@
         <input type="text" name="studentID" id="studentID" placeholder="Student ID">
         <input type="text" name="name" id="name" placeholder="Student Name">
         <input type="text" name="email" id="email" placeholder="Student Email">
-        <button>Student Data</button>
+        <button>Serch By Itendifier</button>
+    </form>
+</body>
+
+<body>
+    <form method="POST" action="/computerLookup">
+        <input type="text" name="computerNumber" id="computerNumber" placeholder="Computer Number">
+        <button>Search By Computer</button>
     </form>
 </body>
