Notes added, Redundant Admin group removed

--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,14 @@
     <title>Homepage</title>
 </head>
 
-
 <body class="homepage">
     <h1 class="header1">Welcome to Student Device Manager</h1>
-    <h3><a href="/register"> Create an Account Here!</a></h3>
+    <!--<h3><a href="/register"> Create an Account Here!</a></h3>-->
     <h3><a href="/login"> Login</a></h3>
-    <h3><a href="/grabSheet"> grabSheet</a></h3>
+    <!--<h3><a href="/grabSheet"> grabSheet</a></h3>-->
 </body>
 
-<body>
+<!--<body>
 
     <form id="makeNote" method="POST" action="/makeNote">
         <input type="text" name="noteText" id="noteText" placeholder="Notes" required>
@@ -42,4 +41,4 @@
         <input type="text" name="computerNumber" id="computerNumber" placeholder="Computer Number">
         <button>Search By Computer</button>
     </form>
-</body>
+</body>-->
