Removal of dated files, creation of a dynamic user home page

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <h1 class="header1">Student Device Manager</h1>
 
     <div>
+        <h1>Login</h1>
         <form method="POST" action="/login">
             <!-- calls the post method to login the user to the server -->
             <label for="email"></label>
